--- a/ACM/vercel.json
+++ b/ACM/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "ACM/./Pages/./Home/./home.htm",
+        "src": "../Pages/Home/home.html",
         "use": "@vercel/static"
       }
     ]
